# kaspi-offers-py

./: .gitignore  README.md  client.py  init.py  models.py  pyproject.toml
.github/workflows/: publish.yml
kaspi_offers_py/: client.py  models.py
tests/: __init__.py  conftest.py  test_client.py  test_models.py
tests/fixtures/: sample_responses.py
