[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kaspi-offers-py"
version = "0.1.0"
authors = [{name = "Nurzhan Aitbayev"}]
description = "Python client for Kaspi.kz offers API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21.0"]